Add a Google Docs link to README

--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 #+TITLE: Robotyczny Rój™ - notatki
 #+LANGUAGE: pl
 
+| Obecne pytania | [[https://docs.google.com/document/d/1kyzdxYgQJ5d-sMB5JxBOJCcFcyahFhYriUiPCamjrJ4/edit?usp=drive_link]] |
+
 * Format
 Warto sobie zrobić osobny dokument z rzeczami do uzupełnienia. Warto dokumentować też o jakie źródło dana notatka się opiera. Poza tym piszcie notatki w sposób który będzie dla was najbardziej wygodny. Powodzenia!
